--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,605 @@
-.App {
-  text-align: center;
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+    width: 100rem;
+    height: 59px;
+    background: #F7F7F7;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.addressPara {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #415859;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.lists {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    /* identical to box height */
+    list-style: none;
+    letter-spacing: 0.08em;
+    display: flex;
+    color: #415859;
 }
 
-.App-link {
-  color: #61dafb;
+.listitems {
+    margin: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icons {
+    margin: 1rem;
+}
+
+.startdiv {
+    display: flex;
+    justify-content: center;
+}
+
+.div1 {
+    width: 50rem;
+    height: 45rem;
+    background-image: url("../src/images/acMan.jpg");
+    background-position: center;
+    /* background: linear-gradient(180deg, rgba(106, 106, 106, 0.6) 0%, rgba(90, 90, 90, 0.39) 60.94%, rgba(245, 240, 210, 0.11) 100%); */
+    /* background-blend-mode: hard-light; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.div1 h3 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 59px;
+    text-align: center;
+    color: #FFFFFF;
+    width: 20rem;
+    margin-top: -10rem;
+}
+
+.div1 input {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19.9452px;
+    line-height: 23px;
+    /* identical to box height */
+
+
+    color: #9A9A9A;
+
+    background: #FFFFFF;
+    border-radius: 4.9863px;
+    width: 632px;
+    height: 61px;
+    margin-top: 4rem;
+    padding: 1rem;
+}
+
+.div1 p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 17.4521px;
+    line-height: 20px;
+    text-decoration-line: underline;
+
+    color: #FFFFFF;
+    margin-top: 1rem;
+}
+
+.div2 {
+    background: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 49rem;
+    height: 45rem;
+}
+
+.div2 h3 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 44px;
+    /* identical to box height */
+
+
+    color: #353535;
+    margin: 1rem;
+}
+
+.div2a {
+    display: flex;
+    flex-flow: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 49rem;
+    height: 27rem;
+}
+
+.div2a div {
+    width: 10rem;
+    height: 5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    text-align: center;
+    cursor: pointer;
+}
+
+.div2a img {
+    width: 3.5rem;
+    height: 3.5rem;
+}
+
+.div2a p {
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18.8354px;
+    line-height: 24px;
+    /* identical to box height */
+
+    text-align: center;
+
+    color: #000000;
+}
+
+.div2b {
+    display: flex;
+    height: 13rem;
+    width: 49rem;
+}
+
+.div2b img {
+    border-radius: 10px;
+    width: 23rem;
+    height: 12rem;
+    margin-left: 1rem;
+    margin-top: 1rem;
+}
+
+.trendingService {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4rem;
+    margin-bottom: 6rem;
+}
+
+.trendingService h1 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 44px;
+    /* identical to box height */
+    margin-bottom: 0.5rem;
+
+
+    color: #025B5D;
+}
+
+.trendingService p {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+
+
+    color: #000000;
+    margin-bottom: 4rem;
+}
+
+.services {
+    display: flex;
+}
+
+.services div {
+    width: 14rem;
+    height: 9rem;
+    background: #FFFFFF;
+    box-shadow: 0px 5.07432px 25.3716px 2.96002px rgba(57, 57, 57, 0.15);
+    border-radius: 17.9289px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+.services img {
+    width: 7.5rem;
+    height: 10rem;
+}
+
+.services p {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20.3194px;
+    line-height: 25px;
+    text-align: center;
+
+    color: #000000;
+    width: 10rem;
+}
+
+.safeService {
+    background: #ECECEE;
+    border-radius: 20px;
+    width: 952px;
+    height: 208px;
+    margin: auto;
+    display: flex;
+    margin-bottom: 6rem;
+    margin-top: 7rem;
+}
+
+.safeService div {
+    width: 570px;
+    padding-left: 5rem;
+    padding-top: 2rem;
+}
+
+.safeService h1 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 44px;
+    color: #025B5D;
+}
+
+.safeService ul {
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 30px;
+
+    color: #000000;
+
+    padding-left: 1.5rem;
+    display: flex;
+    flex-flow: wrap;
+    width: 40rem;
+}
+
+.safeService li {
+    margin: 1rem 0px;
+    margin-right: 10rem;
+}
+
+.safeService img {
+    width: 382px;
+    height: 207px;
+    border-radius: 20px;
+}
+
+.services2 {
+    display: flex;
+    text-align: center;
+}
+
+.services2 div {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
+
+.services2 div div {
+    background: #531C1C;
+    border-radius: 10px;
+    width: 278px;
+    height: 156px;
+}
+
+.services2 h4 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    /* identical to box height */
+
+
+    color: #000000;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.services2 p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+
+    color: #757575;
+}
+
+.assuredClass {
+    text-align: center;
+}
+
+.assuredClass img {
+    width: 99rem;
+}
+
+.services3 {
+    display: flex;
+}
+
+.services3 div {
+    background: #FFFFFF;
+    box-shadow: 0px 5.21718px 26.0859px 3.04336px rgba(57, 57, 57, 0.15);
+    border-radius: 18.4336px;
+    width: 189.25px;
+    height: 151.16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+.services3 img {
+    width: 116.09px;
+    height: 116.09px;
+}
+
+.services3 p {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17.3906px;
+    line-height: 21px;
+    text-align: center;
+
+    color: #000000;
+    width: 169.59px;
+}
+
+.services4 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 11rem;
+    margin-bottom: 10rem;
+}
+
+.services4 h1 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 44px;
+    margin-bottom: 1rem;
+    color: #025B5D;
+    width: 11rem;
+
+}
+
+#subtitle {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+
+
+    color: #000000;
+    width: 9rem;
+}
+
+#innerdiv {
+    display: flex;
+    margin-left: 2rem;
+}
+
+#innerdiv div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0.5rem;
+    margin-right: 0.75rem;
+    background: #FFFFFF;
+    box-shadow: 0px 6px 30px 3.5px rgba(0, 0, 0, 0.15);
+    border-radius: 15px;
+    width: 200px;
+    height: 150px;
+}
+
+#innerdiv img {
+    /* width: 135px; */
+    height: 135px;
+    margin-top: -4rem;
+}
+
+#innerdiv h3 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17.3906px;
+    line-height: 21px;
+    text-align: center;
+
+    color: #000000;
+    width: 169.59px;
+    margin-top: 1rem;
+    /* margin-bottom: 6rem; */
+}
+
+#innerdiv p{
+    font-family: 'Mulish';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 19px;
+/* identical to box height */
+
+text-align: center;
+
+color: #757575;
+padding: 0px 0.6rem;
+margin-bottom: 1rem;
+}
+
+.Benefits{
+    display: flex;
+    background: #E5E4E9;
+    width: 100rem;
+    height: 27rem;
+    margin: auto;
+    margin-bottom: 10rem;
+
+}
+
+.Benefits img{
+    width: 36.5rem;
+    height: 27rem;
+}
+
+
+.Benefits_div2{
+    background: #FFFFFF;
+    width: 31rem;
+    height: 24rem;
+    margin: auto;
+}
+
+.Benefits h1{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 44px;
+    
+    color: #017F82;
+    width: 20rem;
+    margin: auto;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+.Benefits li{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    
+    color: #000000;
+    height: 58px;
+    margin: auto;
+    width: 14rem;
+}
+
+.reviews{
+display: flex;
+width: 100%;
+justify-content: center;
+margin-top: 2rem;
+}
+
+.reviews div{
+    width: 300px;
+height: 191px;
+    background: #FFFFFF;
+    box-shadow: 1px 20px 50px 1px rgba(0, 0, 0, 0.1);
+    margin: 1rem;
+    padding: 2rem;
+}
+
+.reviews p{
+    font-family: 'Mulish';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 18px;
+/* or 129% */
+
+letter-spacing: 0.02em;
+
+color: #000000;
+height: 3rem;
+
+}
+
+.reviews h5{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    
+    color: #025B5D;
+}
+
+.footer{
+    background: #343434;
+    width: 100rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer div{
+    display: flex;
+    margin-top: 2rem;
+}
+
+.footer h6{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 20px;
+    letter-spacing: 0.08em;
+    color: #FFFFFF;
+    width: 15rem;
+}
+
+.footer p{
+    
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 20px;
+    letter-spacing: 0.08em;
+    color: #FFFFFF;
+    width: 70rem;
+
+}
+
+.footer img{
+    width: 100rem;
 }
